--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -1,5 +1,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Nunito:wght@200;300;400;500;600;700&display=swap');
 
+.mandat {
+	color: red;
+}
+
+.disabled {
+	pointer-events: none;
+}
+
 :root{
    --main-color:#8e44ad;
    --red:#e74c3c;
